header alignment fix

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -9,7 +9,7 @@ body{background:#15191f; font-family: 'Open Sans', sans-serif;}
 
 /*Header Area*/
 header{width:100%; background:#191919;} 
-    #logoArea{width:100%; margin:0 auto; margin-top:1.5625em /*25px/16*/; margin-bottom:1.5625em /*25px/16*/; position:relative;}
+    #logoArea{width:100%; margin:0 auto; margin-top:1.25em /*20px/16*/; margin-bottom:1.5625em /*25px/16*/; position:relative;}
     #socialLinks{position:absolute; top:10px;right:0; width:156px; display:none;}
     #socialLinks a{display:block; width:40px; height:40px; background:url(../images/socialicons.jpg) top left no-repeat;
                     float:left; margin-right:12px;}
@@ -35,6 +35,7 @@ header{width:100%; background:#191919;}
 @media screen and (min-width:1000px) { 
 
 #logoArea{width:1000px;}
+#socialLinks{display:block;}
 nav ul{width:1000px;}
     
 /*Content Area*/
